<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.osamak.quizapp.MainActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_heading"
        android:layout_marginBottom="10dp"
        android:textSize="36sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_category_heading"
        android:textSize="28sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorText"/>

    <RadioGroup
         android:id="@+id/quiz_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
        android:layout_marginBottom="12dp">

         <RadioButton
             android:id="@+id/sports_category"
             android:text="@string/sports_category"
             android:checked="true"
             style="@style/RadioButtonStyle"/>

         <RadioButton
             android:id="@+id/education_category"
             android:text="@string/education_category"
             style="@style/RadioButtonStyle"/>
    </RadioGroup>

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_text"
        android:padding="12dp"
        android:textSize="21sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"/>

</LinearLayout>